test/Fail/CubicalWithoutGlueCannotImportGlue.agda
{-# OPTIONS --cubical-without-glue #-}

open import Agda.Builtin.Cubical.Glue -- should error
